# contrail-dashboard

./: MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
contrail_dashboard/api/: contrail_quantum.py
contrail_dashboard/content/networks/: panel.py  tables.py  tabs.py  tests.py  urls.py  views.py  workflows.py
contrail_dashboard/content/networks/ipam/: forms.py  tables.py  urls.py  views.py
contrail_dashboard/content/networks/policy/: forms.py  tables.py  urls.py  views.py
contrail_dashboard/content/networks/ports/: tables.py  urls.py  views.py
contrail_dashboard/content/networks/subnets/: tables.py  urls.py  views.py  workflows.py
contrail_dashboard/content/networks/templates/networks/: _create.html  _network_policies.html  _networks.html  _update.html  index.html
contrail_dashboard/content/networks/templates/networks/ipam/: _add_ipam_entry.html  _create.html  _update.html  add_ipam_entry.html  create.html  detail.html  update.html
contrail_dashboard/content/networks/templates/networks/policy/: _add_rule.html  _create.html  _rule_action_format.html  _rule_format.html  _rule_source_format.html  _update.html  add_rule.html  create.html  detail.html  update.html
contrail_dashboard/content/networks/templates/networks/ports/: _detail_overview.html  _update.html
contrail_dashboard/content/networks/templates/networks/subnets/: _detail_overview.html
contrail_dashboard/enabled/: _1411_network_panel_group.py  _1431_remove_project_network_panel.py  _1432_project_networks_panel.py
